tests/golden/type_errors/typed_array_index_assignment_mismatch.cd
let xs: [number] = [1];
xs[0] = "bad";
